syntax = "proto3";

package notification;

import "entity/domain/notification/model/notification.proto";

option go_package = "github.com/blackhorseya/godine/entity/domain/notification/biz";

message SendNotificationRequest {
    string user_id = 1;
    int64 order_id = 2;
    string type = 3;
    string message = 4;
}

message ListMyNotificationsRequest {
    int64 page = 1;
    int64 page_size = 2;
}

service NotificationService {
    rpc SendNotification (SendNotificationRequest) returns (Notification);
    rpc ListMyNotifications (ListMyNotificationsRequest) returns (stream Notification);
}
