syntax = "proto3";
package order;

option go_package = "github.com/blackhorseya/godine/entity/domain/order/biz";

import "entity/domain/order/model/order.proto";

message SubmitOrderRequest {
}

message ListOrdersRequest {
  int64 page = 1;
  int64 page_size = 2;
}

service OrderService {
  rpc SubmitOrder(SubmitOrderRequest) returns (Order) {}
  rpc ListOrders(ListOrdersRequest) returns (stream Order) {}
}
