syntax = "proto3";

package payment;

import "domain/payment/model/payment.proto";

option go_package = "github.com/blackhorseya/godine/entity/domain/payment/biz";

message CreatePaymentRequest {
  int64 order_id = 1;
  PaymentAmount amount = 2;
}

message GetPaymentRequest {
  string payment_id = 1;
}

message ListPaymentsRequest {
  int64 page = 1;
  int64 page_size = 2;
}

message ListPaymentsResponse {
  repeated Payment payments = 1;
  int64 total = 2;
}

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (Payment);
  rpc GetPayment(GetPaymentRequest) returns (Payment);
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
}
